remove circle on timeline

--- a/index.html
+++ b/index.html
@@ -520,20 +520,20 @@
             }
         }
 
-        .timeline-item::before {
+        /* .timeline-item::before {
             content: '';
             position: absolute;
-            left: -28px;
+            left: -20px;
             top: 30px;
-            width: 16px;
-            height: 16px;
+            width: 7px;
+            height: 7px;
             background: #4a5568;
             border-radius: 50%;
-            border: 3px solid white;
+            border: 2px solid white;
             transition: all 0.3s ease;
             animation: dotPulse 2s ease-in-out infinite;
             box-shadow: 0 0 0 6px rgba(74, 85, 104, 0.2);
-        }
+        } */
 
         @keyframes dotPulse {
             0%, 100% { transform: scale(1); }
