--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </div>
                     </div>
 
-                    <div class="timeline-item">
+                    <!-- <div class="timeline-item">
                         <div class="timeline-header">
                             <div>
                                 <div class="job-title">Junior Software Developer Intern</div>
@@ -141,9 +141,9 @@
                                 <li>Contributed to improving application performance by 25%</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="timeline-item">
+                    <!-- <div class="timeline-item">
                         <div class="timeline-header">
                             <div>
                                 <div class="job-title">Freelance Web Developer</div>
@@ -158,7 +158,7 @@
                                 <li>Maintained excellent client relationships and received positive feedback</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -174,7 +174,7 @@
                                 <div class="degree-title">Bachelor of Science in Computer Science & Engineering</div>
                                 <div class="university">Dhaka International University</div>
                             </div>
-                            <div class="date">2022 - 2026</div>
+                            <div class="date">2021 - 2022</div>
                         </div>
                         <div class="description">
                             Current CGPA: 3.8/4.0<br>
@@ -188,7 +188,7 @@
                                 <div class="degree-title">Higher Secondary Certificate (HSC)</div>
                                 <div class="university">Dhaka College</div>
                             </div>
-                            <div class="date">2020 - 2022</div>
+                            <div class="date">2018 - 2020</div>
                         </div>
                         <div class="description">
                             Science Group - GPA: 5.00/5.00<br>
